[package]
name = "hd44780-embedded-hal"
authors = ["Markus Halder <markushalder0208@gmail.com>"]
description = "Driver for HD44780-LCD ontop of embedded-hal(-async). (I2C and GPIO interface)"
categories = ["embedded", "driver", "lcd", "i2c", "gpio"]
#documentation = "https://docs.rs/hd44780" #TODO
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wolkns/hd44780-embedded-hal"
version = "0.1.0"


[dependencies]
embedded-hal = { version="1.0.0" }
embedded-hal-async = { version="1.0.0", optional = true }


[features]
async = ["dep:embedded-hal-async"]
